[package]
name = "escapepod-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bincode = "2.0.0-rc.3"
libc = "0.2.146"
nix = "0.26.2"
serde = "1.0.164"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
