[package]
name = "escapepod-restore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
escapepod-common = { path = "../escapepod-common" }
syscalls = "0.6.13"

[build]
rustflags = ["-C", "relocation-model=pic"]
